September 8, 2014:
 * First commit, version 0.1
 * Adds functionality to determine if a given number is prime.